// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatDisplay - file_read tool call snapshot altMode (running → done) > snapshot: done state (result appended) 1`] = `
"❯ [you]
  Read the config file

⚙ Read src/config.ts

"
`;

exports[`ChatDisplay - file_read tool call snapshot altMode (running → done) > snapshot: running state (no result yet) 1`] = `
"❯ [you]
  Read the config file

⚙ Reading src/config.ts
"
`;
